--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,23 @@
-# Java Maven CircleCI 2.1 configuration file
-##
-
-version: 2.1
-
-orbs:
-  vulnerability-checker: whitesource/vulnerability-checker@19.7.2
-  
-workflows:
- test:
-   jobs:
-      - vulnerability-checker/scan
+version: 2
+jobs:
+  upload-artifact:
+    docker:
+      - image: circleci/openjdk:8-jdk
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run: mvn dependency:go-offline
+      - run:
+          name: maven build
+          command: |
+            mvn clean install
+      - run:
+          name: Install jFrog CLI
+          command: curl -fL https://getcli.jfrog.io | sh
+      - run:
+          name: Push to Artifactory
+          command: |
+            ./jfrog rt config --url $ARTIFACTORY_URL --user wlo --apikey AKCp5ek8AXXM6jGSNXrmSEyCdf7Mhu6XZ7kc5gFcv6JozJ1xJVL9HjGVtBX1TAUYaMFpNxkJy --interactive=false
+            ./jfrog rt u https://wlo.jfrog.io/artifactory/NPM-Shiri-Test/ NPM-Shiri-Test --build-name=CCI-test-build --build-number=$CIRCLE_BUILD_NUM
+            ./jfrog rt bce CCI-test-build $CIRCLE_BUILD_NUM  # collects all environment variables on the agent
+            ./jfrog rt bp CCI-test-build $CIRCLE_BUILD_NUM  # attaches ^^ to the build in artifactory
