--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,10 @@ jobs:
       - artifactory/install
       - artifactory/configure
       - artifactory/build-integration
+      env:
+      ARTIFACTORY_URL: https://wlo.jfrog.io/
+      ARTIFACTORY_API_KEY: AKCp5ek8AXXM6jGSNXrmSEyCdf7Mhu6XZ7kc5gFcv6JozJ1xJVL9HjGVtBX1TAUYaMFpNxkJy
+      ARTIFACTORY_USER: wlo
 orbs:
   artifactory: circleci/artifactory@1.0.0
 version: 2.1
