--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ jobs:
       - artifactory/configure
       - artifactory/build-integration
     environment:
-       ARTIFACTORY_URL: https://wlo.jfrog.io
-       ARTIFACTORY_API_KEY: AKCp5ek8AXXM6jGSNXrmSEyCdf7Mhu6XZ7kc5gFcv6JozJ1xJVL9HjGVtBX1TAUYaMFpNxkJy
-       ARTIFACTORY_USER: wlo
+       ARTIFACTORY_URL: "https://wlo.jfrog.io"
+       ARTIFACTORY_API_KEY: "AKCp5ek8AXXM6jGSNXrmSEyCdf7Mhu6XZ7kc5gFcv6JozJ1xJVL9HjGVtBX1TAUYaMFpNxkJy"
+       ARTIFACTORY_USER: "wlo"
 
 orbs:
   artifactory: circleci/artifactory@1.0.0
