--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
       - artifactory/configure
       - artifactory/build-integration
     environment:
-       ARTIFACTORY_URL: "https://wlo.jfrog.io/artifactory"
-       ARTIFACTORY_API_KEY: "AKCp5ek8AXXM6jGSNXrmSEyCdf7Mhu6XZ7kc5gFcv6JozJ1xJVL9HjGVtBX1TAUYaMFpNxkJy"
+       ARTIFACTORY_URL: "http://http://63.33.198.168/artifactory"
+       ARTIFACTORY_API_KEY: "AKCp5ek8GvgJKyTexSgnyA38HqjV3UKVoaykthEuVuSSXqwaggKraNA2YX2vePr784YMYbiBN"
        ARTIFACTORY_USER: "wlo"
 
 orbs:
